Update page2 one player.html

--- a/Ultimate Tic-Tac-Toe/page2 one player.html
+++ b/Ultimate Tic-Tac-Toe/page2 one player.html
@@ -88,7 +88,7 @@
     <main>
         <!-- Controls -->
         <div class="controls">
-            <button id="restart-button" onclick="transitionPage('page1.html')">Restart</button>
+            <button id="restart-button" onclick="transitionPage('index.html')">Restart</button>
         </div>
 
         <!-- Outer Board -->
